src/objects/StudentProcess__c.object
<CustomObject>
    <fields>
        <fullName>CurrentMentorName__c</fullName>
        <description>Formula field that pulls in the student mentor first and last name.</description>
        <formula>Student__r.Mentor__r.FirstName &amp;&quot; &quot; &amp; Student__r.Mentor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Mentor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentTermCode__c</fullName>
        <description>A formula field that pulls in the student&apos;s current term number (e.g., 201212, 201301)</description>
        <formula>Student__r.CurrentTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Term Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentTermCompletedCUs__c</fullName>
        <description>A formula field that brings in the student&apos;s current term completed CU&apos;s.</description>
        <formula>Student__r.CurrentTermCompletedCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Term Completed CUs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentTermEnrolledCUs__c</fullName>
        <description>This formula fields pulls in the student&apos;s current term enrolled CU&apos;s.</description>
        <formula>Student__r.CurrentTermEnrolledCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Term Enrolled CUs</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsMentor__c</fullName>
        <description>Check to see if the logged in user is the student&apos;s mentor for access to view the student process.</description>
        <formula>If(Student__r.Mentor__r.PIDM__c = $User.PIDM__c,&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Current User Is Mentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <description>Date field to house the first choice date for a late referral.</description>
        <label>Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <description>Date field to house the second choice date for a late referral.</description>
        <label>Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date3__c</fullName>
        <description>Date field to house the third choice date for a late referral.</description>
        <label>Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCleared__c</fullName>
        <description>Date field used to house a date the student process was cleared.</description>
        <label>Date Approved/Denied/Canceled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateCompleted__c</fullName>
        <description>Date field to house when the student process was marked as completed.</description>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field that indicates whether or not a student has confirmed their return date.</description>
        <label>Date Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateDiplomaMailed__c</fullName>
        <description>Date field to indicate when the student&apos;s diploma was mailed.</description>
        <label>Date Diploma Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateNotifiedOfDrop__c</fullName>
        <description>A date field indicating the date the student notified the university of their intent to withdraw.</description>
        <label>Date Notified of Drop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfDetermination__c</fullName>
        <description>A date field indicating the date of determination for official or administrative withdrawals.</description>
        <label>Date of Determination</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatePMApproved__c</fullName>
        <description>Date field that indicates when the PM approved the request.</description>
        <label>Date PM Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateWDRecoveryReferredforProcessin__c</fullName>
        <label>Drop Clearance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofLastCall__c</fullName>
        <description>Date field that will allow a mentor or other staff to indicate the date of last phone call with student.</description>
        <inlineHelpText>Please select the date of the last call you had with the student.</inlineHelpText>
        <label>Date of Last Live Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysBetweenLastCall__c</fullName>
        <description>Formula field that returns the days between the date of last call and the student process created date.</description>
        <formula>DATEVALUE(CreatedDate) - DateofLastCall__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Created Date - Date of Last Call</inlineHelpText>
        <label>Days Between Last Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DegreePlanComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to determine if the student&apos;s degree plan is complete to continue processing the graduation application.</description>
        <inlineHelpText>Check the box if the student&apos;s degree plan meets the graduation completion requirements for their program.</inlineHelpText>
        <label>Degree Plan Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeleteDrop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DetailedReason__c</fullName>
        <description>Open text field allowing explanation of the reason for request and/or change.</description>
        <label>Detailed Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DifferentDiplomaName__c</fullName>
        <description>This field brings in the value from the qualitrics survey on the question asked of the student if the name they wish to be printed on their diploma is different than the name WGU has on file.</description>
        <label>Different Diploma Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiplomaNameConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to ensure that the user is checking the name the student wishes to have printed on their diploma against the official Banner student name.</description>
        <inlineHelpText>Check this box if you have confirmed that the name the student wishes to have printed on their diploma matches the current or any alternate names on their Banner record.</inlineHelpText>
        <label>Diploma Name Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiplomaName__c</fullName>
        <description>Name the student requested to have printed on their WGU diploma.</description>
        <label>Diploma Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiplomaPrepared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to indicate whether or not a diploma has been prepared to mail to the graduate.</description>
        <inlineHelpText>Mark this box if the diploma has been created and printed to be mailed to the graduate.</inlineHelpText>
        <label>Diploma Prepared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisciplinaryWithdrawal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether or not the withdrawal is due to disciplinary action.</description>
        <label>Disciplinary Withdrawal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DispositionConcerns__c</fullName>
        <description>A picklist field indicating whether or not the user has checked for any disposition concerns while making the readmission decision.</description>
        <label>Disposition Concerns</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoNotAgree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that student Does Not Agree to terms and conditions</description>
        <inlineHelpText>Student Does Not Agree to terms and conditions</inlineHelpText>
        <label>Do Not Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DropCleared__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field to mark that the W/D counselor has completed recovery efforts.</inlineHelpText>
        <label>Drop Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DropCode__c</fullName>
        <description>A picklist field indicating the drop code.</description>
        <label>Drop Code</label>
        <picklist>
            <picklistValues>
                <fullName>Drop (DR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop Do Not Contact (DD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn (WI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn Graduated (WG)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DropPreventedPriorToWithdrawl__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &quot;Drop Prevented&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drop Prevented Prior to Withdrawl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveTermCode__c</fullName>
        <description>Text field for users to enter in the new term code (e.g., 201305, 201309) for Banner processing.</description>
        <label>Effective Term Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveTermEndDate__c</fullName>
        <description>A date field indicating the student&apos;s term end date where the change needs to apply to.</description>
        <label>Effective Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveTermStartDate__c</fullName>
        <description>Date field that allows users to enter in the term start date that the change should be made effective for.</description>
        <label>Effective Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExemptStatusApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a student is in an exempt status</description>
        <label>Exempt Status Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExemptStatusRemoved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a student&apos;s formerly applied exempt status has been removed</description>
        <label>Exempt Status Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtendOutreach__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not to extend outreach efforts past the contact by date.</description>
        <label>Extend Outreach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAADate__c</fullName>
        <description>Formula field that brings in the student&apos;s FAA from their contact record.</description>
        <formula>Student__r.FAADate__c</formula>
        <label>FAA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAAppeal__c</fullName>
        <description>Picklist field used to indicate if a student has been granted a financial aid appeal (to change SAP status).</description>
        <label>FA Appeal</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granted - GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granted - WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Granted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieldExperience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Experience</label>
        <referenceTo>FieldExperience__c</referenceTo>
        <relationshipLabel>Student Processes</relationshipLabel>
        <relationshipName>StudentProcesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinanceFee__c</fullName>
        <description>A picklist field indicating the status of payment of special fees relating to the student process.</description>
        <label>Finance Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx Fee Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceInvestigation__c</fullName>
        <description>Picklist field used for the Financial Aid department when clearing students for readmission.</description>
        <label>Finance Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>Transcript Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transcript Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceNSLDSCheck__c</fullName>
        <description>A picklist field indicating the status of the NSLDS check for finance.</description>
        <label>Finance NSLDS Check</label>
        <picklist>
            <picklistValues>
                <fullName>Unchecked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinancePaymentArrangments__c</fullName>
        <description>A picklist field indicating what finance payment arrangement the student has made.</description>
        <label>Finance Payment Arrangments</label>
        <picklist>
            <picklistValues>
                <fullName>Tuition Installment Agreement (TIA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid in full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinancePaymentType__c</fullName>
        <description>A picklist field that indicates how the student pays tuition (e.g., self pay, financial aid, scholarship)</description>
        <label>Finance Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Self Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid / Self Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid / Private Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Pay / VA Benefits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinancePriorBalance__c</fullName>
        <description>A picklist field indicating if the student has a prior financial balance on their account.</description>
        <label>Finance Prior Balance</label>
        <picklist>
            <picklistValues>
                <fullName>Arrangements Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceReadmissionBilled__c</fullName>
        <description>A picklist indicating the status of the readmission billing process.</description>
        <label>Finance Readmission Billed</label>
        <picklist>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Billed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceReadmissionFinancialAidStatus__c</fullName>
        <description>A picklist field indicating the status of the financial aid application for the readmission process.</description>
        <label>Finance Readmission Financial Aid Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceReversalTBReturnExtension__c</fullName>
        <description>Field to replace the Finance-Reversal: TB Return Extension field in Talisma</description>
        <label>Finance Reversal TB Return Extension</label>
        <picklist>
            <picklistValues>
                <fullName>Reversed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reversed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceReversalTBStartCancelled__c</fullName>
        <description>Replaces the Finance-Re-Bill: TB Start Cancelled in Talisma</description>
        <label>Finance Reversal TB Start Cancelled</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceReversalTBStartComplete__c</fullName>
        <description>Migrated from Talisma -- Is this field required for TB?</description>
        <label>Finance Reversal TB Start Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Reversed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reversed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceReviewNotes__c</fullName>
        <description>A text area to allow bursar to make any important notes pertaining to the graduation finance clearance.</description>
        <label>Finance Review Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinanceRevisionTBReturns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finance Revision TB Returns</description>
        <label>Finance Revision TB Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinanceRevisionTBStarts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to replace the Finance Revisions TB starts field in talisma</description>
        <label>Finance Revision- TB Starts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinanceStatus__c</fullName>
        <description>This picklist is used to indicate the reason a student has a financial hold on their account, pending the student process.</description>
        <label>Finance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IG but Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Finance Review Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Review Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Review Complete - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Review Complete - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved, but app fee not paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared for TB Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinanceTBStartComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TB Start Complete for Finance</description>
        <label>Finance- TB Start Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialAidAppeal__c</fullName>
        <label>Financial Aid Appeal</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinancialAidStatus__c</fullName>
        <description>Formula field that brings over the Student&apos;s Financial Aid Status from their contact record.</description>
        <formula>Student__r.FinancialAidStatus__c</formula>
        <label>Financial Aid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialReviewType__c</fullName>
        <description>Which department needs to do the financial review</description>
        <label>Financial Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bursar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstAttemptToContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if the first attempt to contact has been completed.</description>
        <label>First Attempt to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>A formula field that pulls in the student&apos;s first name.</description>
        <formula>Student__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlaggedForOutreach__c</fullName>
        <formula>IF(NOT(ISBLANK(FollowUpDate__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flagged for Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <description>Date field for follow-up</description>
        <inlineHelpText>If the student is considering re-enrolling at WGU in the future, how soon should we follow up with them?</inlineHelpText>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUpStatus__c</fullName>
        <description>Picklist used to indicate the status of follow-up outreach efforts.</description>
        <label>Follow Up Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GradeLevelAfterPC__c</fullName>
        <description>A picklist field that allows the user to select what the student&apos;s grade level would be after a program change has been made.</description>
        <label>Grade Level After PC</label>
        <picklist>
            <picklistValues>
                <fullName>Freshman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophomore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Year Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GradeLevelBeforePC__c</fullName>
        <description>A picklist field that allows the user to select the appropriate student grade level prior to a program change being performed.</description>
        <label>Grade Level Before PC</label>
        <picklist>
            <picklistValues>
                <fullName>Freshman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophomore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Year Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GraduationAcademicYear__c</fullName>
        <formula>IF( LEN( GraduationTerm__c ) = 6 , 

IF( VALUE( RIGHT( GraduationTerm__c, 2 )) &lt;= 6, 

TEXT(VALUE(RIGHT( LEFT( GraduationTerm__c, 4 ), 2 )) - 1 ) + 

IF( VALUE( RIGHT( LEFT( GraduationTerm__c, 4 ), 2 )) &lt;= 8, &apos;0&apos;, &apos;&apos; ) + 
TEXT( VALUE( RIGHT( LEFT( GraduationTerm__c, 4 ), 2 ))), 

IF( VALUE( RIGHT( LEFT( GraduationTerm__c, 4 ), 2 )) &lt;= 8, &apos;0&apos;, &apos;&apos; ) + 

TEXT( VALUE( RIGHT( LEFT( GraduationTerm__c, 4 ), 2 ))) + 
IF( VALUE( RIGHT( LEFT( GraduationTerm__c, 4 ), 2 )) &lt;= 7, &apos;0&apos;, &apos;&apos; ) + 
TEXT( VALUE( RIGHT( LEFT( GraduationTerm__c, 4 ), 2 )) + 1)), 

&apos;Invalid/Empty Graduation Term&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Academic Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GraduationDate__c</fullName>
        <description>Student graduation date from given program.</description>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GraduationTerm__c</fullName>
        <description>The term the student will be graduated from in Banner.</description>
        <label>Graduation Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoldDate__c</fullName>
        <description>A date field indicating the date the student process was put on hold.</description>
        <label>Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HoldReason__c</fullName>
        <description>A picklist field indicating the reason the student process is on hold.</description>
        <label>Hold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Establishing Contact with Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting AAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Course Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need New Mentor Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Memo of Understanding (MOU)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HoldStatus__c</fullName>
        <description>A picklist field indicating the outcome of the hold.</description>
        <label>Hold Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Drop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HoldsExist__c</fullName>
        <description>A picklist field that allows the user to select whether or not the student has a finance hold.</description>
        <label>Holds Exist</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InactivityDocumentedInStudentNotes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Inactive documentation on Degree Plan Notes</inlineHelpText>
        <label>Inactivity Documented In Student Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncompletePending__c</fullName>
        <description>Marked as true when a student wants to take a term break, but has an incomplete course.</description>
        <label>Incomplete Pending</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>